gitops/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      nodeSelector:
        kubernetes.io/hostname: ocp-worker1

      containers:
        - name: mysql
          image: quay.io/sclorg/mysql-80-c9s:latest

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql/data

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
