gitops/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tmg-crud
spec:
  to:
    kind: Service
    name: tmg-crud
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
